Fix wrong gradient formula

--- a/_posts/2018-05-28-1st-blog.md
+++ b/_posts/2018-05-28-1st-blog.md
@@ -37,11 +37,11 @@ $$
 The new weights will then be computed using this formula:
 
 $$
-w_0 = w_0 - \alpha * \frac{\partial f}{\partial w_0}
+w_0 = w_0 - \alpha * \frac{1}{m} \sum_{i=0}^{m-1}{(y_{actual} - y_{prediction}) * x_0^i}
 $$
 
 $$
-w_1 = w_1 - \alpha * \frac{\partial f}{\partial w_1}
+w_1 = w_1 - \alpha * \frac{1}{m} \sum_{i=0}^{m-1}{(y_{actual} - y_{prediction}) * x_1^i}
 $$
 
 $$
@@ -49,7 +49,7 @@ $$
 $$
 
 $$
-w_{m-1} = w_{m-1} - \alpha * \frac{\partial f}{\partial w_{m-1}}
+w_{m-1} = w_{m-1} - \alpha * \frac{1}{m} \sum_{i=0}^{m-1}{(y_{actual} - y_{prediction}) * x_{m-1}^i}
 $$
 
 After the number of epochs specified is reached, the training will then stop and the current weights will be used in future predictions.
