Add reference to the MSE gradient computation

--- a/_posts/2018-05-28-1st-blog.md
+++ b/_posts/2018-05-28-1st-blog.md
@@ -50,6 +50,8 @@ $$
 \frac{\partial f}{\partial w_{m-1}} = \frac{1}{n} \sum_{i=0}^{n-1}{(y_{actual} - y_{prediction}) * x_{m-1}^i}
 $$
 
+**You can view the step-by-step computation of the gradient of the MSE [here](https://septa97.me/2018/06/MSE-gradient).**
+
 The new weights will then be computed using this formula:
 
 $$
