Add comments: true to the YAML Front Matter

--- a/_posts/2018-05-28-1st-blog.md
+++ b/_posts/2018-05-28-1st-blog.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title:  "First Blog: Implementing Multivariate Regression using NumPy"
+comments: true
 tags:
   - pure-ML
   - machine-learning
